src/regression/parse_pool/progtest12.sfp.out

sfc in program: parse_pool/progtest12.sfp
syntax error at 5 at line:
from any goto foo bar
                  ^
