src/regression/parse_pool/progtest12.sfp
# Testing erroneous program definition (missing when keyword)
configuration foo { nothing nothing }
event-condition bar { timer = 8192 }

from any goto foo bar

start foo

